/api/v1/recipes/images: added bing search feature